{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 85,
  "lineage": "7556dbee-2af2-6ece-5521-57c8ce766336",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0709586e659204883",
            "association_id": "eipassoc-0f104e0977605c86e",
            "domain": "vpc",
            "id": "eipalloc-0709586e659204883",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09529d45caca6c554",
            "private_dns": "ip-10-0-1-248.us-east-2.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-18-189-116-174.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.116.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_TF"
            },
            "tags_all": {
              "Name": "EIP_TF"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BE-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00767c61c537f1d8d",
            "arn": "arn:aws:ec2:us-east-2:654654394081:instance/i-0d9456215db29ac45",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9456215db29ac45",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TF_Instance_BE",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00822bd739ff56f76",
            "private_dns": "ip-10-0-3-68.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e8d0cdc788d8b15",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f496cbfa4b14cd7b",
            "tags": {
              "Name": "Python_Instance"
            },
            "tags_all": {
              "Name": "Python_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1f9b1f824666ddd"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_BE",
            "aws_subnet.Private_Subnets",
            "aws_vpc.My_VPC",
            "data.aws_ami.nginx_AMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "FE-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00767c61c537f1d8d",
            "arn": "arn:aws:ec2:us-east-2:654654394081:instance/i-006697f5805f77847",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006697f5805f77847",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TF_Instance",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081f407e37b311c1c",
            "private_dns": "ip-10-0-1-52.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "public_ip": "52.14.101.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0846cab93c6948d11",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0215751d327e5810c",
            "tags": {
              "Name": "Nginx_Instance"
            },
            "tags_all": {
              "Name": "Nginx_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0596ab228b0f76260"
            ]
          },
          "dependencies": [
            "aws_security_group.SG_FE",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC",
            "data.aws_ami.nginx_AMI"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:internet-gateway/igw-07c73e6b7198bea5c",
            "id": "igw-07c73e6b7198bea5c",
            "owner_id": "654654394081",
            "tags": {
              "Name": "IGW_Terraform"
            },
            "tags_all": {
              "Name": "IGW_Terraform"
            },
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0709586e659204883",
            "association_id": "eipassoc-0f104e0977605c86e",
            "connectivity_type": "public",
            "id": "nat-000e0afa053b3f271",
            "network_interface_id": "eni-09529d45caca6c554",
            "private_ip": "10.0.1.248",
            "public_ip": "18.189.116.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0215751d327e5810c",
            "tags": {
              "Name": "NAT_GW_TF"
            },
            "tags_all": {
              "Name": "NAT_GW_TF"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:route-table/rtb-037b739ab74efc5e2",
            "id": "rtb-037b739ab74efc5e2",
            "owner_id": "654654394081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000e0afa053b3f271",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri_RT"
            },
            "tags_all": {
              "Name": "Pri_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:route-table/rtb-0f302266d1c57d056",
            "id": "rtb-0f302266d1c57d056",
            "owner_id": "654654394081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c73e6b7198bea5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pub_RT"
            },
            "tags_all": {
              "Name": "Pub_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pri_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54aa77a7b9cf2bf",
            "route_table_id": "rtb-037b739ab74efc5e2",
            "subnet_id": "subnet-0f496cbfa4b14cd7b"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT",
            "aws_subnet.Private_Subnets",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b9428935bd114d",
            "route_table_id": "rtb-037b739ab74efc5e2",
            "subnet_id": "subnet-072e6802e503258df"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NAT_GW",
            "aws_route_table.Private_RT",
            "aws_subnet.Private_Subnets",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0073b844ed7398f74",
            "route_table_id": "rtb-0f302266d1c57d056",
            "subnet_id": "subnet-0215751d327e5810c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b30b0bc0644a5b4",
            "route_table_id": "rtb-0f302266d1c57d056",
            "subnet_id": "subnet-03e39ba7475ec261d"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_Subnets",
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_BE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:security-group/sg-0f1f9b1f824666ddd",
            "description": "Security Group for backend-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1f9b1f824666ddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "BE-sg",
            "name_prefix": "",
            "owner_id": "654654394081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-BE"
            },
            "tags_all": {
              "Name": "SG-BE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_FE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:security-group/sg-0596ab228b0f76260",
            "description": "Security Group for frontend-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0596ab228b0f76260",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "FE-sg",
            "name_prefix": "",
            "owner_id": "654654394081",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-FE"
            },
            "tags_all": {
              "Name": "SG-FE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:subnet/subnet-0f496cbfa4b14cd7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f496cbfa4b14cd7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654394081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_1_TF"
            },
            "tags_all": {
              "Name": "Private_Subnet_1_TF"
            },
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:subnet/subnet-072e6802e503258df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072e6802e503258df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654394081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_2_TF"
            },
            "tags_all": {
              "Name": "Private_Subnet_2_TF"
            },
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:subnet/subnet-0215751d327e5810c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0215751d327e5810c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654394081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1_TF"
            },
            "tags_all": {
              "Name": "Public_Subnet_1_TF"
            },
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:subnet/subnet-03e39ba7475ec261d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e39ba7475ec261d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654394081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2_TF"
            },
            "tags_all": {
              "Name": "Public_Subnet_2_TF"
            },
            "vpc_id": "vpc-0b1d7648bb60fc1c1"
          },
          "dependencies": [
            "aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:654654394081:vpc/vpc-0b1d7648bb60fc1c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0617ffca1ec1b6ac9",
            "default_route_table_id": "rtb-05b074af8809fd79b",
            "default_security_group_id": "sg-0ff08ba60a7e18c20",
            "dhcp_options_id": "dopt-062ea2b9115b8a160",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1d7648bb60fc1c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b074af8809fd79b",
            "owner_id": "654654394081",
            "tags": {
              "Name": "VPC_TF_var"
            },
            "tags_all": {
              "Name": "VPC_TF_var"
            }
          }
        }
      ]
    }
  ]
}